--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ GITHUB_CLIENT_SECRET=
 JUDGE0_BASE_URL=
 JUDGE0_RAPIDAPI_KEY=
 JUDGE0_HOST_HEADER=
+
+GOOGLE_FORM_URL=iframe用のGoogleフォームURL
+GOOGLE_FORM_CONFIRM_URL=Googleフォームの問い合わせページに直接アクセスするためのURL
