--- a/config/storage.yml
+++ b/config/storage.yml
@@ -23,3 +23,11 @@ test:
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
+
+# =======================
+# 本番（Render）環境
+# =======================
+production:
+  service: Disk
+  # Persistent Disk を /rails/storage にマウントし、環境変数で参照
+  root: <%= ENV.fetch("RAILS_STORAGE_ROOT", Rails.root.join("storage")) %>
