--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 # docker-compose.yml
 services:
   db:
-    image: postgres:latest
+    image: postgres:17
     platform: linux/amd64
     environment:
       TZ: Asia/Tokyo
